auth minor issues
