# src/routes/mongoRoutes/mongoAuthRouter.ts
@@ -56,15 +56,16 @@ router.post("/mongo/auth/signup", async (req, res) => {
 
 router.post("/mongo/auth/verify", async (req, res) => {
     try {
-        
-        let decodedUser: any = jwt.verify(req.body.authToken, "secret");
-        const result: any = await getUser(decodedUser.userMail, decodedUser.userPassword);
-
-        if(!result){
-            throw new Error("User not found");
+            
+        const token = req.header('Authorization')?.replace('Bearer ', '');
+        if (!token) {
+            return res.status(401).send("Authorization token not provided");
         }
-        
-        res.status(200).send(result);
+
+            jwt.verify(token, 'secret');
+            
+            res.status(200).json({message: "User is verified!!"});
+
     
     } catch (error) {
         console.log(error);
@@ -115,19 +116,4 @@ async function createUser(first_name: string, last_name: string, email: string, 
     }
 }
 
-export const checkUserRole = (requiredRole: string) => {
-    return async (req: any, res: any, next: any) => {
-        try {
-            const userRole = req.user.role; 
-            if (userRole === requiredRole) {
-                next(); 
-            } else {
-                res.status(403).json({ message: 'Forbidden: Insufficient permissions' });
-            }
-        } catch (error) {
-            console.error(error);
-            res.status(500).json({ message: 'Internal Server Error' });
-        }
-    };
-};
 export default router;
